# LVGL-ported-OpenHarmony

./: BUILD.gn  README.md  demo.c  lv_conf.h  lv_version.h
examples/porting/: lv_port_disp_template.c  lv_port_disp_template.h
examples/styles/: lv_example_style_14.c
examples/widgets/scale/: lv_example_scale_7.c
